# regex-tester

./: README.md  pyproject.toml
regex_tester/: __init__.py  core.py
